# AINews

./: CLAUDE.md  README.md  about.html  articles_20260418.json  articles_20260419.json  file_index.txt  index.html  pyproject.toml  rss.xml  test_e2e.py  test_imports.py
.github/workflows/: daily-crawl.yml
archive/: 2026-04-19.html  2026-04-20.html  index.html
scripts/: generate_site.py  run_pipeline.py
src/ainews/: models.py
src/ainews/config/: __init__.py  sources.yaml
src/ainews/crawler/: base.py  rss_crawler.py
src/ainews/generator/: site_generator.py
src/ainews/generator/templates/: base.html  index.html  rss.xml
src/ainews/processor/: __init__.py  categorizer.py  deduplicator.py  summarizer.py
src/ainews/storage/: __init__.py  database.py
static/css/: style.css
static/js/: main.js
